# stroke_segmentor

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
docs/: README_preprocessed.md
docs/source/: conf.py  index.rst  inferer.rst  model_handler.rst
stroke_segmentor/: inferer.py  model_handler.py  zenodo.py
stroke_segmentor/utils/: citation_reminder.py
tests/: test_inferer.py  test_model_handler.py  test_zenodo.py
