[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "package_name"
version = "0.0.0.dev"
description = ""
authors = ["Marcel Rosier <marcel.rosier@tum.de>"]
repository = "https://www.TODO.com"
homepage = "https://www.TODO.com"
documentation = "https://www.TODO.com"
readme = "README.md"


# Add the exclude field directly under [tool.poetry]
exclude = ["examples", "benchmark"]

[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
flake8 = ">=5.0.1"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
furo = ">=2024.8.6"
myst-parser = ">=2.0.0"
